--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin: 0;
         }
         </style>
-        <title>Gráfica de líneas</title>
+        <title>GeoTachos</title>
     </head>
     <body>
         
